--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
     <title>React Boilerplate</title>
   </head>
   <body>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="App"></div>
   </body>
 </html>
