--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="App"></div>
+    <div id="root" class="text-gray-400 bg-gray-900 body-font"></div>
   </body>
 </html>
