--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Boilerplate</title>
+    <meta
+      name="description"
+      content="Frontend developer with 12+ years of experience working with HTML, CSS and JavaScript."
+    />
+    <title>Sandra Vargas - Frontend Developer</title>
   </head>
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
