Refactor layout. Update public folder.

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -18,6 +19,6 @@
     </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="text-gray-400 bg-gray-900 body-font"></div>
+    <div id="root" class="text-gray-400 bg-gray-900 body-font flex flex-col items-stretch"></div>
   </body>
 </html>
