Refactor inline classes to add dark styles

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
     </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="text-gray-400 bg-gray-900 body-font flex flex-col items-stretch"></div>
+    <div id="root"></div>
   </body>
 </html>
